--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,19 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- Paleta primaria de colores del proyecto -->
+    <color name="Tawny">#CC5803</color>
+    <color name="CocoaBrown">#E2711D</color>
+    <color name="PrincetonOrange">#FF9505</color>
+    <color name="SelectiveYellow">#FFB627</color>
+    <color name="Xanthous">#FFC971</color>
+
+    <!-- Paleta secundaria de colores del proyecto -->
+    <color name="RussianViolet">#240046</color>
+    <color name="PersianIndigo">#3C096C</color>
+    <color name="Tekhelet">#5A189A</color>
+    <color name="FrenchViolet">#7B2CBF</color>
+    <color name="Amethyst">#9D4EDD</color>
+
 </resources>
