--- a/app/src/main/res/drawable/background_initscreen.xml
+++ b/app/src/main/res/drawable/background_initscreen.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <gradient
-        android:startColor="@color/Xanthous"
-        android:centerColor="@color/SelectiveYellow"
-        android:endColor="@color/PrincetonOrange"
-        android:angle="135"
+        android:startColor="@color/lightYellow"
+        android:endColor="@color/orange"
         />
 
 </shape>
