--- a/app/src/main/res/drawable/button_initscreen.xml
+++ b/app/src/main/res/drawable/button_initscreen.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <gradient
-        android:startColor="@color/Tawny"
-        android:endColor="@color/SelectiveYellow"
-        android:centerColor="@color/PrincetonOrange"
+        android:startColor="@color/lightYellow"
+        android:endColor="@color/orange"
         />
     <corners android:radius="20dp"/>
-    <stroke android:color="@color/RussianViolet" android:width="2dp"/>
 
 
 </shape>
