Terminado Layout de Menú sin funcionalidad

--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -81,6 +81,7 @@
                 android:background="@drawable/textinput_stroke"
                 android:fontFamily="@font/nunito_bold"
                 android:inputType="textEmailAddress"
+                android:singleLine="true"
                 tools:ignore="SpeakableTextPresentCheck" />
         </com.google.android.material.textfield.TextInputLayout>
 
