--- a/app/src/main/res/layout/item_pais.xml
+++ b/app/src/main/res/layout/item_pais.xml
@@ -19,8 +19,8 @@
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/ivBandera"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="160dp"
+                android:layout_height="105dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
