Cambiado método de Login y SignIn de acuerdo con el modelo MVVM

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -97,7 +97,7 @@
         android:fontFamily="@font/nunito_black"
         android:text="@string/textWelcome"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/RussianViolet"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -110,7 +110,7 @@
         android:fontFamily="@font/nunito_bold"
         android:text="@string/selectOption"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/Tekhelet"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/textView7"
         app:layout_constraintStart_toStartOf="@+id/textView7"
