no va el boton del test jajaj

--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -22,21 +22,6 @@
         app:srcCompat="@drawable/mockup_pantalla_inicio_removebg_preview"
         tools:ignore="ImageContrastCheck" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btStart"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"
-        android:background="@drawable/button_initscreen"
-        android:fontFamily="@font/nunito_black"
-        android:text="@string/start"
-        android:textSize="19sp"
-        app:backgroundTint="@null"
-        app:layout_constraintEnd_toEndOf="@+id/tvSubtitle"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/tvSubtitle"
-        app:layout_constraintTop_toBottomOf="@+id/sbNumber" />
-
     <ImageView
         android:id="@+id/ivBackButtonMenu"
         android:layout_width="40dp"
@@ -97,11 +82,37 @@
         android:layout_width="306dp"
         android:layout_height="30dp"
         android:layout_marginTop="150dp"
+        android:max="51"
         android:progressTint="@color/SelectiveYellow"
         android:thumbTint="@color/SelectiveYellow"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvSubtitle" />
+
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btStart"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="96dp"
+        android:background="@drawable/button_initscreen"
+        android:fontFamily="@font/nunito_black"
+        android:text="@string/start"
+        android:textSize="19sp"
+        app:backgroundTint="@null"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="@+id/tvSubtitle"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/tvSubtitle" />
+
+    <TextView
+        android:id="@+id/tvQuestions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/btStart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sbNumber" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
