--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -7,7 +7,7 @@
     tools:context=".view.QuizActivity">
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btStart2"
+        android:id="@+id/btNextQuestion"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="32dp"
-        app:layout_constraintBottom_toTopOf="@+id/btStart2"
+        app:layout_constraintBottom_toTopOf="@+id/btNextQuestion"
         app:layout_constraintEnd_toEndOf="@+id/ivBandera2"
         app:layout_constraintStart_toStartOf="@+id/ivBandera2"
         app:layout_constraintTop_toBottomOf="@+id/tvPaisQuestion"
