--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -19,11 +19,11 @@
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivBackButtonPuntuaciones"
+        app:layout_constraintTop_toBottomOf="@+id/ivBackButtonScore"
         tools:ignore="TextContrastCheck" />
 
     <ImageView
-        android:id="@+id/ivBackButtonPuntuaciones"
+        android:id="@+id/ivBackButtonScore"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
@@ -36,7 +36,7 @@
         tools:ignore="ImageContrastCheck" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcPuntuaciones"
+        android:id="@+id/rcScores"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
