--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,6 @@
     <color name="lightYellow">#ffde59</color>
     <color name="orange">#ff914d</color>
 
+    <color name="grey">#D6D5D5</color>
+
 </resources>
