--- a/app/src/main/res/layout/item_score.xml
+++ b/app/src/main/res/layout/item_score.xml
@@ -9,7 +9,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/grey"
+        android:backgroundTint="@color/PrincetonOrange"
         app:cardCornerRadius="10dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -25,7 +25,7 @@
                 android:gravity="center"
                 android:paddingStart="15dp"
                 android:paddingEnd="15dp"
-                android:textColor="@color/PrincetonOrange"
+                android:textColor="@color/black"
                 android:textSize="28sp"
                 app:layout_constraintBottom_toBottomOf="@id/tabladatos"
                 app:layout_constraintStart_toStartOf="parent"
@@ -63,7 +63,7 @@
                         android:layout_height="match_parent"
                         android:fontFamily="@font/nunito_bold"
                         android:gravity="center"
-                        android:textColor="@color/Tawny"
+                        android:textColor="@color/black"
                         tools:ignore="TextContrastCheck"
                         tools:text="51" />
 
@@ -89,7 +89,7 @@
                         android:layout_height="match_parent"
                         android:fontFamily="@font/nunito_bold"
                         android:gravity="center"
-                        android:textColor="@color/Tawny"
+                        android:textColor="@color/black"
                         tools:ignore="TextContrastCheck"
                         tools:text="51" />
                 </TableRow>
@@ -116,7 +116,7 @@
                         android:gravity="center"
                         android:paddingStart="10dp"
                         android:paddingEnd="10dp"
-                        android:textColor="@color/Tawny"
+                        android:textColor="@color/black"
                         tools:ignore="TextContrastCheck"
                         tools:text="51" />
                 </TableRow>
